# supercaching-dns

./: .env  .gitignore  Cargo.toml  README.md
migrations/: 20240525210306_add_cachable_records.sql
src/: args.rs  main.rs
