[package]
name = "supercaching-dns"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.80"
clap = { version = "4.5.4", features = ["derive"] }
dotenvy = "0.15.7"
hickory-client = { version = "0.24.1", features = ["serde"] }
hickory-resolver = { version = "0.24.1", features = ["serde", "serde-config"] }
hickory-server = "0.24.1"
serde_json = "1.0.117"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
